style.css
/*----ORGANISATON GENERALE DE LA PAGE------*/


@font-face 
{
	font-family: 'open_sansregular';
	src: url('fonts/opensans_regular_macroman/OpenSans-Regular-webfont.eot');
	src: url('fonts/opensans_regular_macroman/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
	url('fonts/opensans_regular_macroman/OpenSans-Regular-webfont.woff2') format('woff2'),
	url('fonts/opensans_regular_macroman/OpenSans-Regular-webfont.woff') format('woff'),
	url('fonts/opensans_regular_macroman/OpenSans-Regular-webfont.ttf') format('truetype'),
	url('fonts/opensans_regular_macroman/OpenSans-Regular-webfont.svg#open_sansregular') format('svg');
	font-weight: normal;
	font-style: normal;
}

@font-face 
{
	font-family: 'open_sanssemibold';
	src: url('fonts/opensans_semibold_macroman/OpenSans-Semibold-webfont.eot');
	src: url('fonts/opensans_semibold_macroman/OpenSans-Semibold-webfont.eot?#iefix') format('embedded-opentype'),
	url('fonts/opensans_semibold_macroman/OpenSans-Semibold-webfont.woff2') format('woff2'),
	url('fonts/opensans_semibold_macroman/OpenSans-Semibold-webfont.woff') format('woff'),
	url('fonts/opensans_semibold_macroman/OpenSans-Semibold-webfont.ttf') format('truetype'),
	url('fonts/opensans_semibold_macroman/OpenSans-Semibold-webfont.svg#open_sanssemibold') format('svg');
	font-weight: normal;
	font-style: normal;
} 
/*Police des titres du Aside à partir d'un webfontkit / Les autres polices utilisent googlefont (cf.html)*/


#bloc_page
{
	font-family: 'Source Sans Pro', sans-serif;
	font-size: 15px;
	background-color: #ECEFF1;
	color: rgba(66,66,66 ,1);
	display: flex; /*Le bloc page en flexbox va permettre d'organiser l'aside et la section principale horizontalement*/
	width: 900px; 
	margin:auto; /*on va centrer la page et lui fixer une largeur de 900px, inutile qu'elle prenne toute la largeur de l'écran*/
}

li
{
	list-style-type: none; /* Toutes lies listes de la page utiliserton des puces sous forme d'image*/
}

a
{
	color: #212121;
}

/*----ASIDE------*/


#lisere
{
	width: 270px; /*le lisere a une taille fixe*/
	display: flex;
	flex-direction: column;
	background-color: #C8E6C9;
}

#cadre_photo h3
{
	display: none; /* Le titre n'apparait pas, le titre est néanmoins recommandé par le service de validation W3C */
} 

#cadre_photo
{
	align-self: center; /* seule la photo est centrée dans le conteneur flex #lisere*/
	margin-top: 30px;
	border: solid 3px rgba(97,97,97 ,0.3);
	border-radius: 50%;
	width: 150px;
	height: 150px; /*le radius à 50% + width et height de même valeur = rond*/
	overflow: hidden; /*la photo ne dépasse pas du cadre*/
}

#cadre_photo_header /*N'apparait que sur mobile*/
{
	display: none;
}

.photo
{
	display: block;
	width: 120%;
	transform: translate(-10px, -25px);
}

.titre_aside
{
	text-align: center;
	text-transform: uppercase;
	color:#C8E6C9;
	background-color: #616161;
	padding: 2%;
	font-family: open_sansregular, Arial, sans-serif;
	font-weight:normal;
	font-size: 1.4em;
}

.titre_aside_gras /*Ne s'applique qu'au titre "A propos de moi"*/
{
	text-align: center;
	text-transform: uppercase;
	color:#C8E6C9;
	background-color: #616161;
	padding: 2%;
	font-family: open_sanssemibold, Arial, sans-serif;
	font-weight:normal;
	font-size: 1.4em;
}

.liste_contact
{
	padding-left: 8%;
	font-weight: bold;
}

.liste_contact li
{
	margin-bottom: 5%;
}

#a_propos
{
	flex:1; /*Prends toute la place dispo*/
}

aside p
{
	text-align: justify;
	margin: 8%;
}


.icones_loisirs
{
	display: flex;
	justify-content: space-around;
	margin-bottom: 5%;
	color: #616161;
}


/*----HEADER------*/


header
{
	margin-bottom: 12.5%;
}

h1
{
	text-transform: uppercase;
	font-weight: 300;
	font-family: Yantramanav, Arial, sans-serif;
	font-size: 2.5em;
	color: black;
	margin-top: 8%;
	margin-bottom: 0;
	margin-left: 6.5%;
	padding-bottom:0;
}

#prenom
{
	font-weight: 400;
	color: #4CAF50;
}

h2
{
	margin-top: 0;
	margin-left: 6.5%;
	padding-top: 0;
	font-size: 1.5em;
	color: rgba(66,66,66 ,1)
}

#ligne_dev
{
	border-bottom:solid;
	border-color:#4CAF50;
}

#cadre_photo_mobile /*N'apparait que sur version mobile*/
{
	display: none;
	align-self: center; /* seule la photo est centrée dans le conteneur flex*/
	margin-top: 30px;
	border: solid 3px rgba(158,157,36 ,0.3);
	border-radius: 50%;
	width: 150px;
	height: 150px; /*le radius à 50% + width et height de même valeur = rond*/
	overflow: hidden; /*la photo ne dépasse pas du cadre*/
}


/*----PAGE CENTRALE------*/


#page_centrale
{
	flex:1; /*permet à la page centrale de prendre tous l'espace disponible en largeur*/
}

section h2
{
	display: none;/* Le titre n'apparait pas, le titre est néanmoins recommandé par le service de validation W3C */
}

.titre_page /*Contient l'icone et le titre de chaque article*/
{
	margin-left: 6.5%;
	padding-bottom: 10px;
	text-transform: uppercase;
	font-size: 1.5em;
	font-weight: bold;
	display: flex;
	border-bottom: solid #4CAF50;
}

.titre_page h3

{
	font-size: 1em;
	margin: 0;
}

.icone_article
{
	color: #4CAF50;
}

.titre_page div /*Gère l'espacement entre l'icone et le titre des articles*/
{
	margin-right: 5%;
}

.liste_page /* = balise ul*/
{
	margin-left: 8%;
	padding-left: 0;
}

.item_formation, .item_professionnel /* Correspond au bloc Puce+Année+Paragraphe*/
{
	display: flex;
	justify-content: space-between;
	margin-bottom: 5%;
}

.bloc_puces
{
	display: flex;
	font-weight: bold;
}

.puces_page
{
	color: #4CAF50;
	font-size: 0.8em;
	margin-right: 10px;
}

h4, h5
{
	display: inline-block; /*Retire les marge automatique au balise de type "h"*/
	margin: 0 0 1.5% 0; 
	/* que le titre de la formation soit toujours aligné horizontalement avec le paragraphe dessou*/
	/* que le titre de la formation soit toujours aligné verticalement avec l'année*/
	/* qu'il y ait une marge entre les titres h4/h5/paragraphe*/
}

h4
{
	font-weight: bold;
	font-size: 1.1em;
	text-transform: uppercase;
}

h5
{
	font-weight: normal;
	font-size: 1em;
}

.paragraphe p
{
	margin:0;
}

.item_formation div /*les paragraphes dans un bloc formation ne doivent pas prendre toute la place*/
{
	max-width: 400px;
}

.item_professionnel div /*les paragraphes dans un bloc formation ne doivent pas prendre toute la place*/
{
	max-width: 400px;
}

.item_recommand
{
	display: flex;
	justify-content: space-between;
	margin-bottom: 20px;
	margin-left: 50px;
	margin-right: 50px;
	margin-top: 15px;
}

p span
{
	font-weight: bold;
}


/*----------------RESPONSIVE DESIGN-------------------------------*/

/*----------------TABLETTES---------------------------------------*/


@media all and (max-device-width: 900px)
{

	/*----ORGANISATON GENERALE DE LA PAGE------*/


	#bloc_page
	{
		flex-direction: column;
		width: auto;
	}


	/*----HEADER------*/


	header
	{
		margin: auto;
		display: flex;
		flex-direction: column;
		background-color: #C8E6C9;
	}

	#prenom
	{
		color: #2E7D32;
	}

	#ligne_dev
	{
		border-bottom:solid;
		border-color:#2E7D32;
	}

	h1, h2
	{
		text-align: center;
		margin-top: 0px;
	}
	
	#titre
	{
		order: 3;
		margin-top: 10px;
	}

	#cadre_photo_header
	{
		display: block;
		margin: auto; /* seule la photo est centrée dans le conteneur flex*/
		border: solid 3px rgba(158,157,36 ,0.3);
		border-radius: 50%;
		width: 150px;
		height: 150px; /*le radius à 50% + width et height de même valeur = rond*/
		overflow: hidden; /*la photo ne dépasse pas du cadre*/
	}

	.photo_header
	{
		width: 120%;
		transform: translate(-12px, -80px);
		
	}


	/*----PAGE CENTRALE------*/


	section
	{
		margin-top: 10px;
	}

	.item_formation, .item_professionnel
	{
		justify-content: space-around;
	}

	.bloc_puces
	{
		margin-right: 50px;
		min-width: 100px;
	}

	.item_recommand
	{
		display: flex;
		justify-content: space-around;
		margin-top: 15px;
	}


	/*----ASIDE------*/


	#lisere
	{
		width: auto;
		order: 2;
	}

	.titre_aside, .titre_aside_gras
	{
		padding: 0.8%
	}

	#cadre_photo
	{
		display: none;
	}

	.liste_contact
	{
		display: flex;
		justify-content: space-between;
		padding: 0;
	}

	#a_propos p
	{
		margin: 3%;
	}

	.liste_contact li
	{
		margin:auto;
		margin-bottom: 15px;
	}

	#loisrs
	{
		display: none;
	}


	/*----------------SMARTPHONES--------------------------------------*/


	@media all and (max-device-width: 576px)
	{

		#bloc_page
		{
			font-size: 20px;
		}

		.photo_header
		{
			display: block;
			width: 120%;
			transform: translate(-12px, -100px);
		}

		h1, h2
		{
			margin-left: 0;
		}

		h3
		{
			margin-left: 0;
		}

		.titre_page
		{
			margin: 0;
			margin-top: 10%;
			justify-content: center;
		}

		.liste_page
		{
			margin-left: 0;
		}

		.item_formation, .item_professionnel
		{
			flex-direction: column;
			align-items: center;
			margin-top: 10%;
		}

		.bloc_puces
		{
			align-self: flex-start;
			margin-bottom: 3%;
		}

		h5
		{
			text-decoration: underline;
		}

		.paragraphe
		{
			text-align: justify;
		}

		.paragraphe p

		{
			margin-top: 3%;
		}

		.liste_contact
		{
			display: block;
		}

		.liste_contact li
		{
			text-align: center;
		}

		.item_recommand
		{
			flex-direction: column;
			align-items: center;
		}

	}

